added image to project-detail and team-member

--- a/src/views/project-detail.handlebars
+++ b/src/views/project-detail.handlebars
@@ -1,3 +1,9 @@
 <h1>Proyecto</h1>
 
 <p>Mostrando el proyecto de id <b>{{id}}</b></p>
+
+<h2>{{project.name}}</h2>
+
+<img
+    width="700"
+    src="{{project.image}}" alt="" crossorigin="anonymous">
