--- a/src/views/team-member.handlebars
+++ b/src/views/team-member.handlebars
@@ -1,3 +1,6 @@
 <h3>Conoce nuestro equipo...</h3>
 
 <p>Mostrando al miembro del equipo: <b>{{name}}</b></p>
+
+{{teamMember.image}}
+<img src="{{teamMember.image}}" alt="" crossorigin="anonymous">
